정의서ver3 재검토 및 추가요구사항 반영분 완료